Integrated chmod for ffmpeg.